--- a/action.yml
+++ b/action.yml
@@ -19,9 +19,9 @@ inputs:
   query:
     required: false
     description: 'Query to be used for SEARCH operation'
-  exclude:
+  excludeProperties:
     required: false
-    description: 'Exclude fields from the search entities array response'
+    description: 'The properties to be excluded from the entity in the search result array'
   identifier:
     required: false
     description: 'The identifier of the entity'
